#bin_PROGRAMS=unittest
#unittest_SOURCES= main.cpp \
#	RegistryCacheTest.cpp \
#	TestFirst.cpp \
#	TestList.cpp \
#	../core/RegistryCache.cpp \
#	../core/Registry.cpp \
#	../thrift/client.cpp \
#	../thrift/proxy_constants.cpp \
#	../thrift/proxy_types.cpp \
#	../thrift/RegistryProxy.cpp \
#	../thrift/RegistryProxyHandler.cpp \
#	../thrift/server.cpp \
#	../utils/JsonUtil.cpp \
#	../utils/RequestPool.cpp \
#	../utils/ZkDao.cpp \
#	../utils/ZkExecutor.cpp \
#	../utils/ZkMonitor.cpp